# jarvis

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BLUEPRINT.md  MODELS.md  SECURITY.md  TROUBLESHOOTING.md
models/: Jarvis.Modelfile
prompts/: system.en.txt  system.sv.txt
scripts/: audit.sh  install.ps1  install.sh  uninstall.sh
services/systemd/: jarvis-core.service
services/windows-bridge/: README.md  bridge.py  jarvis-bridge.spec  requirements.txt
src/jarvis/: __init__.py  __main__.py  cli.py
src/jarvis/agent/: __init__.py  llm.py  loop.py
src/jarvis/audio/: __init__.py  mic.py  stt.py  tts.py  vad.py  wake.py
src/jarvis/config/: __init__.py  settings.py
src/jarvis/hud/: __init__.py  orb.py
src/jarvis/memory/: __init__.py  store.py
src/jarvis/server/: __init__.py  client.py  core.py
src/jarvis/tools/: __init__.py  fs.py  memory.py  registry.py  shell.py  web.py  win.py
src/jarvis/utils/: __init__.py  audit.py  logging.py  perf.py
src/jarvis/vault/: __init__.py  vault.py
src/jarvis/wsl/: __init__.py  interop.py
tests/: conftest.py  test_audit_log.py  test_config.py  test_registry.py  test_sentence_split.py  test_shell_deny.py  test_wsl.py
