[project]
name = "jarvis"
version = "0.1.0"
description = "Local, autonomous, voice-driven AI assistant for WSL/Ubuntu."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Linus Alfonsson", email = "limpmaestro@gmail.com" }]
requires-python = ">=3.11,<3.13"

dependencies = [
    # Core
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "anyio>=4.4",
    "structlog>=24.1",
    "rich>=13.7",
    "typer>=0.12",
    "uvicorn>=0.30",
    "fastapi>=0.111",
    "websockets>=12.0",
    # LLM
    "ollama>=0.3.0",
    # Audio I/O
    "sounddevice>=0.4.7",
    "soundfile>=0.12.1",
    "numpy>=1.26",
    # STT (wake-word lives in optional [wake] extra; tflite-runtime has no cp312 wheels)
    "faster-whisper>=1.0.3",
    "silero-vad>=5.1",
    # TTS
    "piper-tts>=1.2.0; platform_system != 'Windows'",
    # Memory
    "chromadb>=0.5.0",
    # Web tools
    "playwright>=1.45",
    "readability-lxml>=0.8.1",
    "beautifulsoup4>=4.12",
    # Vault
    "pyrage>=1.1.3",
    "keyring>=25.0",
    # Windows bridge client side
    "psutil>=6.0",
    "mss>=9.0",
    # HUD
    "pyqt6>=6.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "respx>=0.21",
]
wake = [
    # Optional wake-word detector. openwakeword pulls tflite-runtime which only
    # ships wheels for Python 3.11 (no cp312 wheels). install.sh installs this
    # extra best-effort; if it fails, push-to-talk on JARVIS_PTT_HOTKEY remains.
    "openwakeword>=0.6.0",
]
bridge = [
    # Installed inside the Windows-side Python that builds jarvis-bridge.exe.
    # Pinned here so PyInstaller picks up consistent versions.
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.8; sys_platform == 'win32'",
    "pygetwindow>=0.0.9",
    "mss>=9.0",
    "psutil>=6.0",
    "pillow>=10.3",
]

[project.scripts]
jarvis = "jarvis.cli:app"
jarvis-core = "jarvis.server.core:main"
jarvis-hud = "jarvis.hud.orb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RET", "PL", "PERF"]
ignore = [
    "PLR0913", "PLR2004", "PLR0915", "PLR0912", "PLR0911",
    "PLC0415",  # local imports are useful for lazy heavy deps
    "PLW0603",  # module-level singletons are fine here
    "E501",     # long lines are fine in docstrings / messages
    "SIM105", "SIM108", "SIM118",
    "B904",     # we re-raise plenty of HTTPExceptions intentionally
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101", "PLC0415", "F401"]
"services/windows-bridge/*" = ["PLC0415"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "build/", "dist/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
